--- a/src/main/webapp/src/index.html
+++ b/src/main/webapp/src/index.html
@@ -18,7 +18,7 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background-color: black;
+      background-color: #aaa;
     }
 
   </style>
